--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <!-- Babel Standalone -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <script type="text/babel" data-presets="react" src="../src/App.tsx"></script>
+    <script type="text/babel" data-presets="react" src="./App.tsx"></script>
 </body>
 
 </html>
